# lecture-ai-engineering

.github/workflows/: test.yml
day1/: .gitignore
day1/04_Assignment/: .gitignore  LICENSE  README.md
day1/04_Assignment/back/: .gitignore  README.md  pyproject.toml
day1/04_Assignment/back/api/: main.py
day1/04_Assignment/back/api/clients/: __init__.py  db_client.py  llm_client.py
day1/04_Assignment/back/api/router/: __init__.py  chat_router.py
day1/04_Assignment/back/api/schemas/: __init__.py  chat_schemas.py
day1/04_Assignment/back/api/services/: __init__.py  chat_services.py
day1/04_Assignment/back/api/settings/: __init__.py  chat_settings.py
day1/04_Assignment/back/db/: schema.sql
day1/04_Assignment/front/: README.md  orval.config.ts  package.json
day1/04_Assignment/front/src/app/: layout.tsx  page.tsx
day1/04_Assignment/front/src/components/: ChatInterface.tsx  MessageItem.tsx  ModeToggle.tsx  SessionSidebar.tsx
day1/04_Assignment/front/src/types/: index.ts
day5/演習1/: main.py
day5/演習1/models/: titanic_model.pkl
day5/演習2/: main.py
